--- a/.env
+++ b/.env
@@ -1,6 +1,6 @@
 # 程序配置
 ## 程序名称
-MAIN_VITE_TITLE = "梦芽音乐站 | SPlayer"
+MAIN_VITE_TITLE = "梦芽音乐站"
 ## 程序主端口
 MAIN_VITE_MAIN_PORT = 7899
 ## 程序开发环境运行端口
@@ -13,7 +13,7 @@ MAIN_VITE_SERVER_HOST = 127.0.0.1
 MAIN_VITE_SERVER_PORT = 11451
 ## API 在线地址（ 网址结尾不要加 / ）
 ### 用于非客户端（ 浏览器环境 ）
-RENDERER_VITE_SERVER_URL = /api
+RENDERER_VITE_SERVER_URL = https://music-api.xdos.tk
 
 # 程序信息
 RENDERER_VITE_SITE_TITLE = "梦芽音乐站 | SPlayer"
