--- a/.env.example
+++ b/.env.example
@@ -1,6 +1,6 @@
 # 程序配置
 ## 程序名称
-MAIN_VITE_TITLE = "梦芽音乐站"
+MAIN_VITE_TITLE = "梦芽音乐"
 ## 程序主端口
 MAIN_VITE_MAIN_PORT = 7899
 ## 程序开发环境运行端口
@@ -13,12 +13,12 @@ MAIN_VITE_SERVER_HOST = 127.0.0.1
 MAIN_VITE_SERVER_PORT = 11451
 ## API 在线地址（ 网址结尾不要加 / ）
 ### 用于非客户端（ 浏览器环境 ）
-RENDERER_VITE_SERVER_URL = https://music-api.xdos.tk
+RENDERER_VITE_SERVER_URL = /api
 
 # 程序信息
-RENDERER_VITE_SITE_TITLE = "梦芽音乐站"
+RENDERER_VITE_SITE_TITLE = "梦芽音乐"
 RENDERER_VITE_SITE_ANTHOR = "無名"
-RENDERER_VITE_SITE_KEYWORDS = "梦芽音乐站,SPlayer,云音乐,播放器,在线音乐,在线播放器,音乐播放器"
+RENDERER_VITE_SITE_KEYWORDS = "SPlayer,云音乐,播放器,在线音乐,在线播放器,音乐播放器"
 RENDERER_VITE_SITE_DES = "一个简约的在线音乐播放器，具有音乐搜索、播放、每日推荐、私人FM、歌词显示、歌曲评论、网易云登录与云盘等功能"
 RENDERER_VITE_SITE_URL = "music.503555.xyz"
 
